# tma4280Group

./: .gitignore  README.md  pull_from_akva2_tma4280_repository.sh
exercises/ex4/: CMakeLists.txt  Makefile  cmake_first_run.sh  cmake_kongull.sh  cmake_kongull_OpenMP.sh  cmake_local.sh  ex4.c  ex4.h  ex4_1n2ppnRel.sh  ex4_1n4ppnRel.sh  ex4_1n8ppnRel.sh  ex4_2n12ppnRel.sh  ex4_2n1ppnRel.sh  ex4_2n2ppnRel.sh  ex4_2n4ppnRel.sh  ex4_jobscript.sh  ex4_jobscript_noMPI.sh  recompile.sh  run_all_kongull_all_on.sh
exercises/ex4/kongull_outpt/: ex4_jobscript.o361995  ex4_jobscript.o362022  ex4_jobscript.o362127  ex4_jobscript.o362128  ex4_jobscript.o362129  ex4_jobscript.o362130  ex4_jobscript.o362131  ex4_jobscript.o362132  ex4_jobscript.o362145  ex4_jobscript.o362146  ex4_jobscript.o362147  ex4_jobscript.o362148  ex4_jobscript.o362149  ex4_jobscript.o362150  ex4_jobscript.o362171  ex4_jobscript.o362172  ex4_jobscript.o362173  ex4_jobscript.o362174  ex4_jobscript.o362175  ex4_jobscript.o362176  ex4_jobscript_noMPI.o364513  ex4_jobscript_noMPI.o364516
exercises/ex4/kongull_outpt/11_33/: ex4_jobscript.o364352  ex4_jobscript.o364353  ex4_jobscript.o364354  ex4_jobscript.o364355  ex4_jobscript.o364356  ex4_jobscript.o364357
exercises/ex4/report/: Makefile  config.tex  ex4.tex
exercises/ex4/runscripts/: ex4_1n2ppnRel.sh  ex4_1n4ppnRel.sh  ex4_1n8ppnRel.sh  ex4_2n12ppnRel.sh  ex4_2n1ppnRel.sh  ex4_2n4ppnRel.sh  ex4_jobscript.sh  run_all_kongull_combined.sh  run_all_kongull_mpi.sh  run_all_kongull_openmp.sh  run_all_kongull_serial.sh
exercises/ex4/runscripts/mpi/: 1n1ppn.sh  (+7 more)
(+233 files in other folders)
